# pokedb

./: .gitignore  README.md  justfile  pyproject.toml  requirements.txt  setup.cfg  streamlit_app.py
.github/workflows/: .pytest.yml
data/: dexes.js  pokemon.js  versions.js
docs/: conf.py  index.rst  pokedb.rst
pokedb/: __init__.py
pokedb/core/: __init__.py  root.py  singleton.py
pokedb/core/enums/: __init__.py  base.py  colors.py  egg_group.py  egg_groups.py  experience.py  extended_enum.py  gender.py  genders.py  types.py
pokedb/io/: __init__.py  js.py
pokedb/pokemon/: __init__.py  database.py  pokemon.py  registrar.py
src/pokedb/: __init__.py
src/pokedb/core/: __init__.py  typing.py
src/pokedb/core/enums/: __init__.py  color.py  egg_group.py  experience.py  gender.py  hidden_moves.py  pokemon_type.py
src/pokedb/games/: __init__.py  pokedex.py  versions.py
src/pokedb/io/: __init__.py  js.py
src/pokedb/pokemon/: database.py  html_repr.py  pokemon.py
tests/: test_pokedb.py
