[metadata]
name = pokedb
description = A Pokémon database
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Topic :: Games/Entertainment
version = attr: pokedb.__version__

[options]
install_requires =
    numpy
    pandas
    
package_dir =
    = src
packages = find:
python_requires = >=3.9.0

[options.packages.find]
where = src
